updated account edit page

--- a/app/assets/stylesheets/components/_accountarea.scss
+++ b/app/assets/stylesheets/components/_accountarea.scss
@@ -4,6 +4,8 @@
     top: 80px;
     background-color: grey;
     padding: 50px;
+    width: 1000px;
+    margin-bottom: 250px;
 }
 
 .station-background {
