--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,11 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="station-background">
+    <div class="station-flex">
+        <div>
+            <%= render 'shared/verticalnavbar' %>
+            <%= yield %>
+        </div>
+            <div class="account-area" id="trackpopup">
+            <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -44,3 +51,45 @@
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+
+            </div>
+        </div>
+    <div class="fullwidth-player fixed">
+        <div class="player-details">
+            <div>
+                <div class="flex">
+                    <div class="image-player">
+                        <img class="image-player" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
+                    </div>
+                    <div class="player-song-details-container">
+                        <h1 class="player-song-title">Track Name</h1>
+                        <h2 class="player-song-details"> Artist - Album </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="player-progress-controls">
+            <div class="player-buttons space-between">
+                <i class="fas fa-fast-backward"></i>
+                <i class="fas fa-play"></i>
+                <i class="fas fa-fast-forward"></i>
+            </div>
+            <div class="player-progress-container">
+                <div class="line"></div>
+            </div>
+        </div>
+        <div class="player-actions space-between">
+            <div>
+                <i class="fas fa-heart"></i>
+            </div>
+            <div>
+                <i class="fas fa-plus-circle"></i>
+            </div>
+            <div>
+                <i class="fas fa-share-alt"></i>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
