corrected background image position zindex

--- a/app/assets/stylesheets/components/_albumtracks.scss
+++ b/app/assets/stylesheets/components/_albumtracks.scss
@@ -8,9 +8,9 @@
     // margin-left: 280px;
 }
 
-video.track-play {
-    height: 50px;
-    width: 100%;
-}
+// video.track-play {
+//     height: 50px;
+//     width: 100%;
+// }
 
 
