--- a/app/assets/stylesheets/components/_verticalnav.scss
+++ b/app/assets/stylesheets/components/_verticalnav.scss
@@ -5,6 +5,7 @@
     padding-top: 20vh;
     position: fixed;
     z-index: 100;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
 }
 
 .vertnav-avatar-title {
