--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,9 @@
                 <%= f.error_notification %>
 
                 <div class="form-inputs">
+                <%= f.input :photo,
+                        autofocus: true,
+                        as: :file %>
                 <%= f.input :fname,
                         required: true,
                         autofocus: true,
