--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,9 @@
         </div>
             <div class="account-area" id="trackpopup">
                 <h1>Account</h1>
+                <% if @user.photo.attached? %>
+                    <%= cl_image_tag @user.photo.key, class: "" %>
+                    <%end%>
                 <p><%= @user.fname %></p>
                 <p><%= @user.lname %></p>
                 <p><%= @user.username %></p>
