--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,8 +3,10 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 56px;
+  width: 110px;
   border-radius: 50%;
+  border: 2px white solid;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
 }
 .avatar-bordered {
   width: 40px;
