--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
             <div class="account-area" id="trackpopup">
                 <h1>Account</h1>
                 <% if @user.photo.attached? %>
-                    <%= cl_image_tag @user.photo.key, class: "" %>
+                    <%= cl_image_tag @user.photo.key, class: "avatar-large" %>
                     <%end%>
                 <p><%= @user.fname %></p>
                 <p><%= @user.lname %></p>
