--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-background">
     <div class="overlay">
         <div class="container-home">
-            <h1 class="headings-one">My Personal Bandcamp</h1>
+            <h1 class="headings-one">Emotional music with BandFeels</h1>
             <p class="headings-two">Sign-up to listen to music</p>
             <%= link_to "Sign-Up", new_user_registration_path, class: "big-button" %>
         </div>
