--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,9 @@
                 <%= f.input :password_confirmation,
                             required: true,
                             input_html: { autocomplete: "new-password" } %>
+                <%= f.input :photo,
+                        autofocus: true,
+                        as: :file %>
               </div>
             <div class="form-actions">
               <%= f.button :submit, "Sign up", class:"devise-buttons" %>
