--- a/app/assets/stylesheets/components/_accountarea.scss
+++ b/app/assets/stylesheets/components/_accountarea.scss
@@ -2,7 +2,8 @@
     position: relative;
     left: 300px;
     top: 80px;
-    background-color: grey;
+    backdrop-filter: blur(15px);
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
     padding: 50px;
     width: 1000px;
     margin-bottom: 250px;
@@ -10,4 +11,16 @@
 
 .station-background {
     height: 100vh;
+}
+
+.avatar-account {
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
+
+.avatar-large-account {
+  width: 180px;
+  border-radius: 50%;
+  border: 2px white solid;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
 }
