--- a/app/assets/stylesheets/components/_accountarea.scss
+++ b/app/assets/stylesheets/components/_accountarea.scss
@@ -5,8 +5,8 @@
     backdrop-filter: blur(15px);
     box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
     padding: 50px;
-    width: 1000px;
-    margin-bottom: 250px;
+    width: 500px;
+    border-radius: 10px;
 }
 
 .station-background {
@@ -14,8 +14,8 @@
 }
 
 .avatar-account {
-    padding-bottom: 50px;
-    padding-top: 50px;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 .avatar-large-account {
@@ -23,4 +23,8 @@
   border-radius: 50%;
   border: 2px white solid;
   box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+
+.account-details {
+    color: white;
 }
