--- a/app/assets/stylesheets/components/_flex.scss
+++ b/app/assets/stylesheets/components/_flex.scss
@@ -5,3 +5,11 @@
 .space-between {
     justify-content: space-between;
 }
+
+.space-around {
+    justify-content: space-around;
+}
+
+.align-center {
+    align-items: center;
+}
