--- a/app/assets/stylesheets/components/_albumsarea.scss
+++ b/app/assets/stylesheets/components/_albumsarea.scss
@@ -1,11 +1,12 @@
 .albums-area {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 40px;
     row-gap: 40px;
     padding: 75px 20px 75px 20px;
-    width: 90%;
+    width: 70%;
     margin-left: 280px;
+    // padding-bottom: 200px;
 }
 
 
