styled new playlist page

--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -4,13 +4,9 @@
             <%= render 'shared/verticalnavbar' %>
             <%= yield %>
         </div>
-        <div class="create-album-area flex">
+        <div class="create-album-area">
             <div class="left-div">
                 <h1 class="new-album-heading">Create a <span class="purple-heading">New Album</span></h1>
-                <div class="album-image-new">
-                <!-- Ruby code to insert image -->
-                </div>
-                <p class="new-album-text">When you have created an album, you will be able to upload your tracks and add details to them.</p>
             </div>
             <div class="right-div">
                 <div class="album-form-area">
