--- a/app/assets/stylesheets/components/_newalbum.scss
+++ b/app/assets/stylesheets/components/_newalbum.scss
@@ -29,7 +29,8 @@
 }
 
 .album-form-area {
-    background-color: grey;
+    backdrop-filter: blur(15px);
+     box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
     border-radius: 10px;
     width: 700px;
     padding: 50px;
