--- a/app/assets/stylesheets/pages/_station.scss
+++ b/app/assets/stylesheets/pages/_station.scss
@@ -16,3 +16,12 @@
     text-align: center;
     height: 100vh;
 }
+
+.search-track {
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.search-form {
+    width: 300px;
+}
