--- a/app/views/tracks/new.html.erb
+++ b/app/views/tracks/new.html.erb
@@ -4,17 +4,11 @@
             <%= render 'shared/verticalnavbar' %>
             <%= yield %>
         </div>
-        <div class="create-album-area flex">
+        <div class="create-album-area">
             <div class="left-div">
                 <h1 class="new-album-heading">Add <span class="purple-heading">New Track</span></h1>
-                <div class="album-image-new">
-                <!-- Ruby code to insert image -->
-                </div>
-                <p class="new-album-text">When you have created an album, you will be able to upload your tracks and add details to them.</p>
-            </div>
             <div class="right-div">
-                <div class="album-form-area">
-                    <!-- Ruby code for form -->
+                <div class="track-form-area">
                     <h2>Add new track</h2>
                         <%= simple_form_for [@album, @track] do |f| %>
                         <%= f.input :title,
