updated home page and contact

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,3 +1,16 @@
 .p-contact {
     color:white;
 }
+
+.connect-contact {
+    background-color: #DD13D5;
+    color: white;
+    font-size: 16px;
+    padding: 10px 25px 10px 25px;
+    border: 0;
+    border-radius: 10px;
+    &:hover {
+        color:white;
+        text-decoration: none;
+    }
+}
