--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
         <div class="container-home">
             <h1 class="headings-one">About</h1>
             <p class="p-about">Music is about capturing emotion and allowing the listener to experience those emotions through the medium os sound. Here you can listen to music uploaded by artists and experience them through emotional or activity based tags, allowing you to experience music discovery as you never have before.</p>
-            
+            <p class="p-about">This site is currently under development.</p>
         </div>
     </div>
 </div>
