--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,10 @@
     <div class="overlay">
         <div class="container-home">
             <h1 class="headings-one">Contact</h1>
-             <p class="p-contact">I am busy developing this project. To get in touch during my development,email me at <a href="mailto:ilia@thedmcsa.co.za">ilia@thedmcsa.co.za</a>.</p>
+            <p class="p-contact">I am busy developing this project. To get in touch during my development, please take a look below.</p>
+            <%= link_to "Email", "mailto:ilia.zolas@gmail.com", class: "connect-contact" %>
+            <%= link_to "Linkedin", "https://www.linkedin.com/in/iliazolas/", class: "connect-contact" %>
+            <%= link_to "Github", "https://github.com/IliaZolas", class: "connect-contact" %>
         </div>
     </div>
 </div>
