--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="overlay">
         <div class="container-home">
             <h1 class="headings-one">Emotional music with BandFeels</h1>
-            <p class="headings-two">Sign-up to listen to music</p>
+            <p class="headings-two">Sign-up to listen to music. Site currently under development.</p>
             <%= link_to "Sign-Up", new_user_registration_path, class: "big-button" %>
         </div>
     </div>
