--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -86,7 +86,7 @@
                         <img class="image-player" src="https://images.unsplash.com/photo-1531278520962-fcf47a2faea2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2989&q=80">
                     </div>
                     <div class="player-song-details-container">
-                        <h1 class="player-song-title">Track Name</h1>
+                        <h1 class="player-song-title"><%= @track.first.title %></h1>
                         <h2 class="player-song-details"> Artist - Album </h2>
                     </div>
                 </div>
