--- a/app/assets/stylesheets/pages/_station.scss
+++ b/app/assets/stylesheets/pages/_station.scss
@@ -25,3 +25,25 @@
 .search-form {
     width: 300px;
 }
+
+.station-tracks-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 40px;
+    row-gap: 40px;
+    // padding: 75px 20px 75px 20px;
+    width: 100%;
+    // margin-left: 280px;
+    padding-bottom: 200px;
+}
+
+.background-station-show {
+    position: absolute;
+    // height: 100vw;
+    z-index: 0;
+}
+
+.track-show-details {
+    position: absolute;
+    margin-left: 280px;
+}
