--- a/app/assets/stylesheets/components/_trackcard.scss
+++ b/app/assets/stylesheets/components/_trackcard.scss
@@ -70,6 +70,11 @@
     padding-right:10px;
 }
 
+.track-playlist-details {
+    padding-left:10px;
+    padding-right:10px;
+}
+
 .track-station-details {
     padding-left:10px;
     padding-right:10px;
