cleaning playlists new

--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,12 +1,12 @@
 <div class="station-background">
-    <div class="station-flex">
+    <div class="playlist-flex">
         <div>
             <%= render 'shared/verticalnavbar' %>
             <%= yield %>
         </div>
-        <div class="create-album-area">
+        <div class="create-playlist-area">
             <div class="left-div">
-                <h1 class="new-album-heading">Create a <span class="purple-heading">New Playlist</span></h1>
+                <h1 class="new-playlist-heading">Create a <span class="purple-heading">New Playlist</span></h1>
             <div class="right-div">
                 <div class="playlist-form-area">
                     <h2>Create new Playlist</h2>
