--- a/app/assets/stylesheets/pages/_playlists.scss
+++ b/app/assets/stylesheets/pages/_playlists.scss
@@ -1,3 +1,16 @@
 .playlist-flex {
     display: flex;
 }
+
+.create-playlist-area {
+    padding-top: 180px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 250px;
+    margin-left: 250px;
+}
+
+.new-playlist-heading {
+    color: white;
+    font-weight: bold;
+}
