cleaning playlists show

--- a/app/assets/stylesheets/components/_playlistarea.scss
+++ b/app/assets/stylesheets/components/_playlistarea.scss
@@ -12,3 +12,19 @@
     width: 70%;
     // margin-left: 280px;
 }
+
+.playlist-tracks-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 40px;
+    row-gap: 40px;
+    // padding: 75px 20px 75px 20px;
+    width: 100%;
+    // margin-left: 280px;
+    padding-bottom: 200px;
+}
+
+.playlist-show-details {
+    position: absolute;
+    margin-left: 280px;
+}
