like and tracklike join table

--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -20,7 +20,7 @@
         <%= link_to "Albums", albums_path, class: "nav-text" %>
         </div>
         <div class="flex">
-        <i class="fas fa-compact-disc"></i>
+        <i class="fas fa-heart"></i>
         <%= link_to "Liked", albums_path, class: "nav-text" %>
         </div>
         <div class="flex">
