fixing form for likes on station

--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -52,6 +52,7 @@
                                     <div>
                                         <i class="fas fa-heart"></i>
                                         <%= simple_form_for @liked_track, url: liked_tracks_path, method: :post do |f| %>
+                                        <%= f.input :like_id, as: :hidden, input_html: { value: 1 } %>
                                         <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
                                         <%= f.submit "Create" %>
                                         <% end %>
