like button clickable

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -44,3 +44,9 @@
         text-decoration: none;
     }
 }
+
+.like-button {
+    color: white;
+    background-color: rgba(0,0,0,0);
+    border: none;
+}
