addtoplaylist button clickable no padding

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -45,9 +45,10 @@
     }
 }
 
-.like-button {
+.like-button, .addtoplaylist {
     color: white;
     background-color: rgba(0,0,0,0);
     border: none;
     padding: 0px;
 }
+
