--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -59,7 +59,9 @@
                                         <% end %>
                                     </div>
                                     <div>
-                                        <i class="fas fa-plus-circle addtoplaylist" id="popup-btn"></i>
+                                    <%= button_tag type: 'submit', class: "addtoplaylist", id: "popup-btn" do %>
+                                                <i class="fas fa-plus-circle"></i>
+                                            <% end %>
                                     </div>
                                     <div>
                                         <i class="fas fa-share-alt"></i>
