--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -51,7 +51,7 @@
                                 <div class="track-actions space-between">
                                     <div>
                                         <%= simple_form_for @liked_track, url: liked_tracks_path, method: :post do |f| %>
-                                        <%= f.input :like_id, as: :hidden, input_html: { value: 1 } %>
+                                        <%= f.input :like_id, as: :hidden, input_html: { value: @liked.id} %>
                                         <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
                                         <%= button_tag type: 'submit', class: "like-button", id: "like-button" do %>
                                                 <i class="fas fa-heart"></i>
