restarted likes feature, Like controller and model only

--- a/app/views/likes/show.html.erb
+++ b/app/views/likes/show.html.erb
@@ -6,13 +6,13 @@
         </div>
             <div class="playlist-tracks-area">
                 <div class="background-albums-show">
-                    <% if @track.first.photo.attached? %>
-                    <%= cl_image_tag @track.first.photo.key, class: "show-background"%>
+                    <% if @track.photo.attached? %>
+                    <%= cl_image_tag @tracks.photo.key, class: "show-background"%>
                     <%end%>
                 </div>
                 <div class="playlist-show-details"> 
                     <div class="">
-                        <h2 class="card-header">Tracks that you liked</h2>
+                    <h1>Liked Tracks</h1>
                     </div>
                 <div class="playlist-tracks-area">
                     <% @tracks.each do |track| %>    
