--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -50,8 +50,8 @@
                                         <%end%>
                                 <div class="track-actions space-between">
                                     <div>
-                                        <%= simple_form_for @liked_track, url: liked_tracks_path, method: :post do |f| %>
-                                        <%= f.input :like_id, as: :hidden, input_html: { value: @liked.id} %>
+                                        <%= simple_form_for @liked_track, url: likes_path, method: :post do |f| %>
+                                        <%= f.input :user_id, as: :hidden, input_html: { value: current_user.id} %>
                                         <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
                                         <%= button_tag type: 'submit', class: "like-button", id: "like-button" do %>
                                                 <i class="fas fa-heart"></i>
