--- a/app/views/station/index.html.erb
+++ b/app/views/station/index.html.erb
@@ -50,7 +50,7 @@
                                         <%end%>
                                 <div class="track-actions space-between">
                                     <div>
-                                        <%= simple_form_for @liked_track, url: likes_path, method: :post do |f| %>
+                                        <%= simple_form_for @liked_track, url: track_likes_path(track.id), method: :post do |f| %>
                                         <%= f.input :user_id, as: :hidden, input_html: { value: current_user.id} %>
                                         <%= f.input :track_id, as: :hidden, input_html: { value: track.id } %>
                                         <%= button_tag type: 'submit', class: "like-button", id: "like-button" do %>
