--- a/app/views/shared/_verticalnavbar.html.erb
+++ b/app/views/shared/_verticalnavbar.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="flex">
         <i class="fas fa-heart"></i>
-        <%= link_to "Liked", index_path(current_user), class: "nav-text" %>
+        <%= link_to "Liked", userlikes_path(current_user), class: "nav-text" %>
         </div>
         <div class="flex">
         <i class="fas fa-user"></i>
